// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render summary expenses with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totaling 
    $232.26
  </h1>
</div>
`;

exports[`should correctly render summary expenses with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expense
     totaling 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render summary expenses with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $10.00
  </h1>
</div>
`;
